<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".resultadoActivity" android:background="#EDFAE5">

    <TextView
            android:text="@string/label_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textSize="30sp"
            android:textColor="#0D8592" android:textStyle="bold" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/masc_sobre"
            android:id="@+id/ivIMC"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"/>
    <TextView
            android:text="@string/result_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvIMC" android:textSize="72sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivIMC" app:layout_constraintTop_toTopOf="@+id/ivIMC"
            app:layout_constraintStart_toEndOf="@+id/ivIMC"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/status_imc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvStatusIMC" app:layout_constraintStart_toStartOf="@+id/tvIMC"
            app:layout_constraintEnd_toEndOf="@+id/tvIMC" android:layout_marginTop="8dp" android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/tvIMC" android:textSize="24sp"/>
    <TextView
            android:text="@string/text_footer"
            style="@style/label_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>