<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainActivity" android:background="#EDFAE5">
    <TextView
            android:text="@string/label_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="30sp"
            android:textColor="#0D8592" android:textStyle="bold" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/label_altura"
            style="@style/label_formulario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:paddingLeft="3dp"/>
    <TextView
            android:text="@string/label_peso"
            style="@style/label_formulario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/inputAltura"
            app:layout_constraintEnd_toEndOf="@+id/inputAltura"
            app:layout_constraintStart_toStartOf="@+id/inputAltura" android:paddingLeft="3dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/label_sexo"
            style="@style/label_formulario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/inputAltura"
            app:layout_constraintStart_toStartOf="@+id/inputAltura" android:paddingLeft="3dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/inputPeso"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/inputAltura"
            app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintEnd_toEndOf="@+id/textView2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:hint="Ex.: 1.75 m"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/inputPeso"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView3"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:hint="Ex.: 65 kg"/>
    <Button
            android:text="@string/button_calcular"
            style="@style/button_calcular"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:id="@+id/btCalcular" app:layout_constraintStart_toStartOf="@+id/inputPeso"
            app:layout_constraintEnd_toEndOf="@+id/inputPeso"
            android:selectAllOnFocus="true"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/spSexo"/>
    <Button
            android:text="@string/button_limpar"
            style="@style/button_limpar"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:id="@+id/btLimpar" app:layout_constraintStart_toStartOf="@+id/btCalcular"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btCalcular" app:layout_constraintEnd_toEndOf="@+id/btCalcular"
            android:textStyle="bold" android:background="#0D8592" android:textColor="#FFFFFF"/>
    <Spinner
            android:layout_width="0dp"
            android:entries="@array/sexos"
            android:layout_height="wrap_content"
            android:id="@+id/spSexo"
            app:layout_constraintEnd_toEndOf="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:paddingStart="0dp" android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>